# projecteuler

./: Cargo.toml  test.sh
euler-1/: Cargo.toml
euler-1/src/: main.rs
euler-10/: Cargo.toml
euler-10/src/: main.rs
euler-11/: Cargo.toml
euler-11/src/: main.rs
euler-12/: Cargo.toml
euler-12/src/: main.rs
euler-13/: Cargo.toml
euler-13/src/: main.rs
euler-14/: Cargo.toml
euler-14/src/: main.rs
euler-15/: Cargo.toml
euler-15/src/: main.rs
euler-16/: Cargo.toml
euler-16/src/: main.rs
euler-17/: Cargo.toml
euler-17/src/: main.rs
euler-18/: Cargo.toml
euler-18/src/: main.rs
euler-19/: Cargo.toml
euler-19/src/: main.rs
euler-2/: Cargo.toml
euler-2/src/: main.rs
euler-20/: Cargo.toml
euler-20/src/: main.rs
euler-21/: Cargo.toml
euler-21/src/: main.rs
euler-22/: Cargo.toml
euler-22/src/: main.rs
euler-23/: Cargo.toml
euler-23/src/: main.rs
euler-24/: Cargo.toml
euler-24/src/: main.rs
euler-25/: Cargo.toml
euler-25/src/: main.rs
euler-26/: Cargo.toml
euler-26/src/: main.rs
euler-27/: Cargo.toml
euler-27/src/: main.rs
euler-28/: Cargo.toml
euler-28/src/: main.rs
euler-29/: Cargo.toml
euler-29/src/: main.rs
euler-3/: Cargo.toml
euler-3/src/: main.rs
euler-30/: Cargo.toml
euler-31/: Cargo.toml
euler-32/: Cargo.toml
euler-33/: Cargo.toml
euler-34/: Cargo.toml
euler-35/: Cargo.toml
euler-4/: Cargo.toml
euler-5/: Cargo.toml
euler-6/: Cargo.toml
euler-7/: Cargo.toml
euler-8/: Cargo.toml
euler-9/: Cargo.toml
euler-test/: Cargo.toml
euler-util/: Cargo.toml
(+15 files in other folders)
